--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
 }
 
 main {
-  height: 100vh;
+  height: 100svh;
   overflow-y: scroll;
   scroll-snap-type: y mandatory;
 }
@@ -32,7 +32,7 @@ main {
 section {
   align-items: center;
   display: flex;
-  height: 100vh;
+  height: 100svh;
   scroll-snap-align: start;
   width: 100vw;
 }
@@ -82,13 +82,13 @@ header {
   height: auto;
   display: block;
   margin: 0 auto;
-  max-width: 40vh;
+  max-width: 45svh;
   width: 100%;
 
   @media (orientation: landscape) {
     height: auto;
-    max-width: none;
-    width: 50vh;
+    max-width: 50%;
+    width: 50svh;
   }
 }
 
