--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
 }
 
 html, body {
-  height: 100svh;
+  height: 100ssvh;
   overflow: clip;
 }
 
@@ -17,7 +17,7 @@ body {
 }
 
 main {
-  height: 100vh;
+  height: 100svh;
   overflow-y: scroll;
   scroll-snap-type: y mandatory;
 }
@@ -37,7 +37,7 @@ main {
 section {
   align-items: center;
   display: flex;
-  height: 100vh;
+  height: 100svh;
   scroll-snap-align: start;
   width: 100vw;
 }
@@ -87,13 +87,13 @@ header {
   height: auto;
   display: block;
   margin: 0 auto;
-  max-width: 45vh;
+  max-width: 45svh;
   width: 100%;
 
   @media (orientation: landscape) {
     height: auto;
     max-width: 50%;
-    width: 50vh;
+    width: 50svh;
   }
 }
 
