--- a/css/styles.css
+++ b/css/styles.css
@@ -6,11 +6,6 @@
   --color-text-hover: oklch(80% 0.13 170); 
 }
 
-html, body {
-  height: 100svh;
-  overflow: clip;
-}
-
 body {
   color: var(--color-text);
   font-family: 'Inter', sans-serif;
@@ -20,6 +15,16 @@ main {
   height: 100svh;
   overflow-y: scroll;
   scroll-snap-type: y mandatory;
+  position: relative;
+}
+
+header {
+  display: flex;
+  left: 0;
+  padding: 1.5rem;
+  position: fixed;
+  right: 0;
+  top: 0;
 }
 
 .content {
@@ -39,14 +44,7 @@ section {
   display: flex;
   height: 100svh;
   scroll-snap-align: start;
-  width: 100vw;
-}
-
-header {
-  display: flex;
-  padding: 1.5rem;
-  position: sticky;
-  top: 0;
+  width: 100svw;
 }
 
 .logo-wrap {
