--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,6 @@ body {
 }
 
 main {
-  height: 100vh;
   position: relative;
 }
 
@@ -40,7 +39,7 @@ header {
 section {
   align-items: center;
   display: flex;
-  height: 100%;
+  margin: 10rem 0;
 }
 
 .logo-wrap {
